# ImageProcessor

./: .gitattributes  .gitignore  README.md  build.info.txt
c-deps/: .gitignore
imgproc-android/: README.md  build.gradle
imgproc-android/app/: CMakeLists.txt  build.gradle
imgproc-android/app/src/main/: AndroidManifest.xml
imgproc-android/app/src/main/assets/: hello2.fs
imgproc-android/app/src/main/cpp/: CCCameraNativeView.cpp  CCCameraNativeView.hpp  CCGLRenderCameraBox.cpp  CCGLRenderCameraBox.hpp  CCGlClientRenderThread.cpp  CCGlClientRenderThread.hpp  ImgProcAndroidCameraJni.cpp  ImgProcAndroidCameraJni.hpp  JniSimpleHelper.hpp  camera_native_view.c  camera_native_view.h  gl_render_camera_box.c  gl_render_camera_box.h  glclient_render_thread.c  glclient_render_thread.h  imgproc_android_camera_jni.c  imgproc_android_camera_jni.h  jni_simple_helper.h
imgproc-android/app/src/main/cpp/simple/: JniMain.cpp  SimpleCameraView.cpp  SimpleCameraView.hpp
imgproc-android/app/src/main/java/com/johnsoft/: App.java
imgproc-android/app/src/main/java/com/johnsoft/alg/: SimpleGpuProc.java  SimpleGpuProcProxy.java
imgproc-android/app/src/main/java/com/johnsoft/imgproc/alg/: GpuImageView.java  ImageGpuProcessActivity.java
imgproc-android/app/src/main/java/com/johnsoft/imgproc/camera/: CameraActivity.java  CameraJavaView.java  CameraManager.java  CameraNativeView.java  CameraView.java  DirectByteBuffers.java  FragmentShaderTypePolicy.java  LoopThread.java  MainActivity.java  Native.java  NativeCameraActivity.java  PipActivity.java
imgproc-android/app/src/main/java/com/johnsoft/imgproc/camera/simple/: SimpleCameraActivity.java  SimpleCameraManager.java  SimpleCameraView.java
imgproc-android/app/src/main/res/layout/: activity_main.xml
imgproc-android/app/src/main/res/values/: strings.xml
imgproc-c/: CMakeLists.txt  build.command  build.linux.sh  build.macosx.command  build.sh  build.windows.bat  build_deps.sh  idea_run.sh
imgproc-c/src/main/cpp/: BaseImageProc.c  BaseImageProc.h  BaseImageProc_jni.c  base.h  jni_data_models.txt  main.c  rgb_yuv.c
imgproc-c/src/main/cpp/base/: base.h  env_config.h  std_common.h
imgproc-c/src/main/cpp/glbox/: SimpleGpuProc_jni.c  glbox.c  glbox.h  gpu_image.c  gpu_image.h  image_type.h
imgproc-c/src/main/cpp/glbox/android/: gpu_image_internal.h
imgproc-c/src/main/cpp/glbox/ios/: gpu_image_internal.h
imgproc-c/src/main/cpp/glbox/linux/: gpu_image_internal.h
imgproc-c/src/main/cpp/glbox/macosx/: gpu_image_internal.h
imgproc-c/src/main/cpp/image_io/: bmp.c  bmp.h  image_io.c  image_io.h  image_test.c  octree_palette.c  octree_palette.h  tga.c  tga.h
imgproc-c/src/main/resources/: 302a1_scale200x300_0.tga  302a1_scale200x300_1.tga  302a1_scale200x300_2.tga  302a1_scale200x300_3.tga  302a1_scale200x300_4.tga  302a1_scale200x300_5.tga  302a1_scale200x300_6.tga  5031.tga  8191.ppm  8391.ppm  a.tif  test1.rgb
imgproc-ios/imgproc-ios/: AppDelegate.h  AppDelegate.m  ImageViewController.h  ImageViewController.m  Info.plist  SettingsViewController.h  SettingsViewController.m  gpu_image.m  main.m
imgproc-ios/imgproc-ios.xcodeproj/: project.pbxproj
imgproc-ios/imgproc-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
imgproc-ios/imgproc-ios/Assets.xcassets/image_test.imageset/: Contents.json
imgproc-ios/imgproc-ios/Base.lproj/: Main.storyboard
imgproc-ios/imgproc-ios/Resources/: hello1.fs  hello3.fs
imgproc-java/: build.gradle  build.linux.sh  build.macosx.command  build.windows.bat  clean.linux.sh  clean.macosx.command  clean.windows.bat  idea_run.sh  make_exe.bat  settings.gradle
imgproc-java/src/main/java/com/johnsoft/: DebugUtils.java  Log.java  MainLauncher.java  OnObject.java  SwingUiFace.java  ToolUtilities.java  UiFace.java
imgproc-java/src/main/java/com/johnsoft/alg/: BaseImageProc.java  SimpleGpuProc.java
imgproc-java/src/main/java/com/johnsoft/swing/: BoxAssembler.java  DialogUtilities.java  GridBagAssembler.java  JImageView.java  MainThreadUtils.java  ScrollUtils.java  SwingImageView.java  SwingMainWindow.java  SwingMenuManager.java  SwingTabPane.java
imgproc-java/src/main/java/com/johnsoft/swing/actions/: AbstractBaseFilterAction.java  AbstractPlaneSliceAction.java  ChartHistogramAction.java  DelegateAction.java  FilterColorPictureAction.java  FilterGreyPictureAction.java  GpuImageProcAction.java  PlaneCombineBitAction.java  PlaneSliceColorBitAction.java  PlaneSliceColorCompAction.java  PlaneSliceGreyBitAction.java  SimpleHistEqualizeAction.java
imgproc-java/src/main/java/com/johnsoft/swing/charts/: Histogram.java  HistogramChart.java  MappingLineChart.java  Readme.txt
imgproc-java/src/main/resources/: hello1.fs  hello2.fs  hello3.fs  zhaoxi.tif
imgproc-viewer/: .gitignore  README.md  build.gradle  settings.gradle
imgproc-viewer/src/main/java/com/johnsoft/viewer/: ARGBFileParser.java  ChannelFileParser.java  FileParser.java  GPcmPlayer.java  ImageExtractor.java  ImageViewer.java  MessageThread.java  PcmPlayer.java  RGBAWriter.java  Test.java  YCbCrFileParser.java
imgproc-viewer/src/main/java/com/johnsoft/viewer/benchmark/: YuvTest.java
imgproc-viewer/src/main/resources/convert/: cie1931_le_500x500.argb  colorbar_le_640x360.argb  dosn1_le_480x360.bgr24  susheview_le_640x480.argb
imgproc-viewer/src/main/resources/images/: doc360_le_265x66.argb  doc360_le_265x66.rgb  doc360_le_308x168.argb  doc360_le_308x168.rgb  frame_0_le_1676x924.yuv420p  frame_88_le_1096x697.b  frame_88_le_1096x697.g  frame_88_le_1096x697.r  frame_88_le_1096x697.rgba  frame_88_le_1096x697.y  lena_le_256x256.u  lena_le_256x256.v  output_le_1024x768.uyvy422  output_le_1024x768.v  output_le_1024x768.y  output_le_1024x768.yuv420sp  output_le_1024x768.yuyv422  output_le_1024x768.yvyu422  output_le_1025x763.uyvy422  output_le_1025x763.yuyv422  output_le_1095x695.yuv420sp  output_le_1427x815.yuv422p  output_le_1427x815.yuv444p  output_le_1676x924.yuv422p  output_le_512x384.yuv420p
imgproc-viewer/src/main/resources/pcms/: out_le_mono_short_16k.pcm
